# advent-of-code

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  run_all.ps1  vcpkg-configuration.json  vcpkg.json
days/2021/: 04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  1.cpp  2.cpp  3.cpp  6.cpp
days/2022/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  4.cpp  5.cpp  6.cpp  8.cpp
days/2023/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp
days/2024/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
days/2025/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp
shared/: main.h  shared.h  transforms.h  utils.h  variant.h
